After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632720 - gnome-volume-control-applet only goes to 100%
gnome-volume-control-applet only goes to 100%
Status: RESOLVED FIXED
Product: gnome-flashback
Classification: Other
Component: sound-applet
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Flashback Maintainers
GNOME Flashback Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-10-20 17:22 UTC by Jean-Philippe Fleury
Modified: 2015-09-10 08:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Mock-up of the applet with a mark vis-à-vis 100% in the slider (4.41 KB, image/png)
2010-10-20 17:52 UTC, Jean-Philippe Fleury
Details

Description Jean-Philippe Fleury 2010-10-20 17:22:30 UTC
The gnome-volume-control-applet's slider only allows to set volume up to 100%, while the gnome-volume-control allows up to 150%. There's a problem when we set volume in gnome-volume-control over 100%. Then, if we want to set another value between 100% and 150%, we just can't with gnome-volume-control-applet. See these steps:

1) Run gnome-volume-control-applet

2) Click right on the gnome-volume-control-applet's icon and go in the sound preferences.

3) Set the volume to the max value possible, so 150%.

4) Close the preferences.

5) Click on the gnome-volume-control-applet's icon.

6) Try to reduce volume just a little bit.

Actual result: when we move the slider down, the volume goes under 100%.

Expected result: we should be able to set volume between 0% and 150%.
Comment 1 Jean-Philippe Fleury 2010-10-20 17:26:55 UTC
See this fixed bug report about the possibility to set volume more than 100% in gnome-volume-control:

https://bugzilla.gnome.org/show_bug.cgi?id=591285
Comment 2 Jean-Philippe Fleury 2010-10-20 17:52:59 UTC
Created attachment 172857 [details]
Mock-up of the applet with a mark vis-à-vis 100% in the slider

Here's a mock-up of gnome-volume-control-applet with a little mark in the slider corresponding to the 100% level. So if the applet allows to set volume more than 100%, we still see where's the 100%. Maybe this mark could be magnetic, so we could easily set the volume precisely to 100%.
Comment 3 Leslie Viljoen 2013-06-15 10:14:30 UTC
Why is the status unconfirmed? Is that why it's been 3 years and the volume control is still stuck at 100%?
Comment 4 Tobias Schönberg 2014-11-24 11:25:15 UTC
After using Unity for a while I actually thought that Gnome would also allow one to control the volume above 100 % with the drop-down applet. I hope this gets implemented, because it is really practical for laptops with low speaker settings.