sound-applet: allow to set volume more then 100%

https://bugzilla.gnome.org/show_bug.cgi?id=632720